# miniextendr

./: .dockerignore  .gitattributes  .gitignore  20251223_bench_summar.md  ADAPTER_TRAITS.md  AGENTS.md  ALTREP_FINAL_SUMMARY.md  ALTREP_IMPROVEMENTS_COMPLETE.md  ALTREP_REVIEW.md  API_REVIEW_FINDINGS.md  CLAUDE.md  COERCE.md  COERCE_AND_INTO_R_REVIEW.md  Cargo.toml  DATAFRAME_COLLECTIONS_SUPPORT.md  DATAFRAME_FINAL_SUMMARY.md  DATAFRAME_HETEROGENEOUS_BUG.md  DONE.typ  Dockerfile.webr  Dockerfile.webr-arm64  ENTRYPOINT.md  FFI_AND_RAYON_REVIEW.md  LICENSE-MIT  MAINTAINER.md  MINIMAL_REPRO.md  NONAPI.md  PLAN-native-link-args.md  RAYON.md  README-INSTALL.txt  README.md  SESSION_CHANGES.md  THREADS.md  TODO.md  TODO.typ  TRACK_CALLER.md  TRAIT_AS_R.md  VENDOR.md  altrep.md  docs.md  justfile  (+4 more)
cargo-revendor/: CLAUDE.md  Cargo.toml  README.md
cargo-revendor/src/: cache.rs  cargo_ops.rs  checksum.rs  main.rs  manifest_guard.rs  metadata.rs  package.rs  strip.rs  vendor.rs  verify.rs
cargo-revendor/tests/: edge_cases_diagnostics.rs  git_deps.rs  integration.rs  multi_workspace.rs  patch_from_config.rs  phase_modes.rs  verify_freeze_compress.rs
miniextendr-api/: CLAUDE.md  Cargo.toml  README.md  build.rs
miniextendr-api/src/: abi.rs  adapter_traits.rs  aho_corasick_impl.rs  allocator.rs  altrep.rs  altrep_bridge.rs  altrep_data.rs  altrep_ext.rs  altrep_impl.rs  altrep_registration.rs  altrep_sexp.rs  altrep_std_impls.rs  altrep_tracking.rs  altrep_traits.rs  as_coerce.rs  async_handle.rs  backtrace.rs  bitflags_impl.rs  bitvec_impl.rs  bytes_impl.rs  cached_class.rs  coerce.rs  condition.rs  connection.rs  convert.rs  dataframe.rs  dataframe_builder.rs  dots.rs  either_impl.rs  encoding.rs  enum_choices.rs  env_flag.rs  error.rs  error_value.rs  expression.rs  externalptr.rs  externalptr_std.rs  factor.rs  ffi.rs  ffi_guard.rs  (+69 more)
miniextendr-api/tests/: allocator.rs  altrep_clamp.rs  altrep_extract.rs  altrep_from_data_matrix.rs  altrep_thread.rs  bytes.rs  coerce.rs  condition_roundtrip.rs  connection.rs  conversion_coverage.rs  dataframe_de.rs  dataframe_de_borrowed.rs  dataframe_group.rs  externalptr.rs  externalptr_class_handle.rs  fixed_arrays.rs  from_r.rs  from_r_references.rs  from_r_strsxp_vecsxp_walks.rs  gc_protect.rs  indexmap.rs  into_r.rs  into_r_result.rs  list.rs  macro_aliases.rs  nalgebra_generic.rs  ndarray_all_types.rs  ndarray_generic.rs  ndarray_string.rs  num_bigint.rs  numeric_vec_batching.rs  ordered_float.rs  ppsize_limit.rs  preserve.rs  protect_pool.rs  r_eval.rs  r_test_utils.rs  rayon.rs  refcount_protect.rs  regex.rs  (+16 more)
miniextendr-bench/: AGENTS.md  BENCH_RESULTS_2026-02-18.md  BENCH_RESULTS_2026-04-20.md  BENCH_RESULTS_2026-05-29-rayon-flatten.md  CLAUDE.md  Cargo.toml  README.md
miniextendr-bench/benches/: allocator.rs  altrep.rs  altrep_advanced.rs  altrep_iter.rs  c_side_attribution.rs  coerce.rs  connections.rs  dataframe.rs  error_path_attribution.rs  externalptr.rs  factor.rs  ffi_calls.rs  from_r.rs  gc_protect.rs  gc_protection_compare.rs  into_r.rs  list.rs  native_vs_coerce.rs  panic_telemetry.rs  preserve.rs  rarray.rs  raw_access.rs  rayon.rs  refcount_protect.rs  rffi_checked.rs  sexp_ext.rs  strict.rs  strings.rs  trait_abi.rs  translate.rs  typed_list.rs  unwind_protect.rs  worker.rs  wrappers.rs
miniextendr-bench/src/: bench_plan.rs  lib.rs  pool_prototypes.rs  raw_ffi.rs
miniextendr-cli/: Cargo.toml  README.md
miniextendr-cli/src/: bridge.rs  cli.rs  commands.rs  main.rs  output.rs  project.rs  scaffold.rs
miniextendr-cli/tests/: smoke.rs
miniextendr-engine/: CLAUDE.md  Cargo.toml  README.md  build.rs
miniextendr-engine/src/: lib.rs  tests.rs
miniextendr-lint/: CLAUDE.md  Cargo.toml  README.md
miniextendr-lint/benches/: lint_scan.rs
miniextendr-lint/src/: crate_index.rs  diagnostic.rs  helpers.rs  lib.rs  lint_code.rs  miniextendr_module.rs  rules.rs
miniextendr-lint/tests/: basic.rs  tests.rs
miniextendr-macros/: CLAUDE.md  Cargo.toml  README.md
miniextendr-macros-core/: Cargo.toml  README.md
miniextendr-macros-core/src/: lib.rs  miniextendr_module.rs
miniextendr-macros/src/: altrep.rs  altrep_derive.rs  altrep_module.rs  async_codegen.rs  c_wrapper_builder.rs  dataframe_derive.rs  externalptr_derive.rs  factor_derive.rs  lib.rs  lifecycle.rs  list_derive.rs  list_macro.rs  match_arg_derive.rs  match_arg_keys.rs  method_return_builder.rs  miniextendr_fn.rs  miniextendr_impl.rs  miniextendr_impl_trait.rs  miniextendr_module.rs  miniextendr_trait.rs  naming.rs  newtype_derive.rs  r_class_formatter.rs  r_macro.rs  r_preconditions.rs  r_wrapper_builder.rs  rconvert_derive.rs  return_type_analysis.rs  roxygen.rs  rust_conversion_builder.rs  struct_enum_dispatch.rs  tests.rs  type_inspect.rs  typed_dataframe.rs  typed_external_macro.rs  typed_list.rs  util.rs  vctrs_derive.rs  vctrs_generics.rs
miniextendr-macros/tests/: snapshots.rs  ui.rs  ui_vctrs.rs
rpkg/: .Rbuildignore  .gitignore  2026-01-16-vctrs-support.txt  CLAUDE.md  DESCRIPTION  NAMESPACE  README.md  bootstrap.R  cleanup  cleanup.ucrt  config.status  configure  configure.ac
rpkg/.cargo/: config.toml  config.toml.in
rpkg/R/: altrep.R  altrep_helpers.R  feature_helpers.R  generics.R  miniextendr-wrappers.R  miniextendr_wrappers.R  rpkg-package.R
rpkg/dev/: altrep.R  unwind.R
rpkg/inst/: vendor.tar.xz
rpkg/man/: AsCoerceErrorTest.Rd  AsCoerceTestData.Rd  AtomicCounter.Rd  Calculator.Rd  ChainedError.Rd  Collections.Rd  CounterTraitEnv.Rd  CounterTraitR6.Rd  CounterTraitS3.Rd  CounterTraitS4.Rd  CounterTraitS7.Rd  Counter_TraitEnv.Rd  Counter_TraitR6.Rd  Counter_TraitS3.Rd  Counter_TraitS4.Rd  Counter_TraitS7.Rd  DeepNest.Rd  DerivedCurrency.Rd  DocDetailsDemo.Rd  DoublerA.Rd  DoublerB.Rd  DoublerEnv.Rd  EnvMatchArgCounter.Rd  EnvPipeBuilder.Rd  EnvRaiser.Rd  ErrorInRCounter.Rd  ErrorInRR6Widget.Rd  ErrorInRS7Gauge.Rd  ExportControlTraitPoint.Rd  FallibleImpl.Rd  FastCounter.Rd  FastCounterFast.Rd  FdefaultProbe.Rd  GreetingBuilder.Rd  GrowableVec.Rd  ImplDotsR6.Rd  ImplDotsS3.Rd  ImplDotsSugar.Rd  IntSet.Rd  IntVecIter.Rd  (+560 more)
(+1994 files in other folders)
