[workspace]
resolver = "3"
members = [
    "miniextendr-api",
    "miniextendr-macros",
    "miniextendr-engine",
    "miniextendr-bench",
    "miniextendr-lint",
]
exclude = [
    "rpkg/src/rust",
    "rpkg/src/vendor",
    "tests/cross-package/consumer.pkg/src/rust/",
    "tests/cross-package/producer.pkg/src/rust/",
    # Template directories contain Cargo.toml with {{placeholders}} that break cargo
    "minirextendr/inst/templates",
]

[workspace.dependencies]
miniextendr-api = { version = "*" }
miniextendr-macros = { version = "*" }
miniextendr-engine = { version = "*" }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/CGMossa/miniextendr"
homepage = "https://github.com/CGMossa/miniextendr"
keywords = ["r", "ffi", "bindings"]
categories = ["api-bindings", "external-ffi-bindings"]
exclude = ["vendor"]

[profile.release]
debug-assertions = true
