[workspace]
resolver = "3"
members = [
    "miniextendr-api",
    "miniextendr-macros",
    "miniextendr-macros-core",
    "miniextendr-engine",
    "miniextendr-bench",
    "miniextendr-lint",
]
exclude = [
    "rpkg",
    "rpkg/src/rust",
    "rpkg/vendor",
    "tests/cross-package/consumer.pkg",
    "tests/cross-package/producer.pkg",
    "tests/cross-package/consumer.pkg/src/rust/",
    "tests/cross-package/producer.pkg/src/rust/",
    "minirextendr",
]

[workspace.dependencies]
miniextendr-api = { version = "*", path = "miniextendr-api" }
miniextendr-macros = { version = "*", path = "miniextendr-macros" }
miniextendr-macros-core = { version = "*", path = "miniextendr-macros-core" }
miniextendr-engine = { version = "*", path = "miniextendr-engine" }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/CGMossa/miniextendr"
homepage = "https://github.com/CGMossa/miniextendr"
keywords = ["r", "ffi", "bindings"]
categories = ["api-bindings", "external-ffi-bindings"]
exclude = ["vendor"]

[profile.release]
debug-assertions = true
