[package]
name = "cargo-revendor"
version = "0.1.0"
edition = "2024"
description = "Vendor Rust dependencies for R packages, including workspace/path deps that cargo vendor skips"
license = "MIT"
publish = false

[[bin]]
name = "cargo-revendor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
toml_edit = "0.22"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
