[package]
name = "cargo-revendor"
version = "0.1.0"
edition = "2024"
description = "Vendor Rust dependencies for R packages, including workspace/path deps that cargo vendor skips"
license = "MIT"
publish = false

# Standalone workspace — not part of the miniextendr workspace
# This keeps cargo-revendor's deps out of the main Cargo.lock
[workspace]

[[bin]]
name = "cargo-revendor"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
cargo_metadata = { version = "0.19", default-features = false }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3", default-features = false }
toml_edit = { version = "0.22", default-features = false, features = ["parse", "display"] }
walkdir = { version = "2", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
