[package]
name = "miniextendr-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime library for miniextendr - safe Rust-R interop with worker threads, ALTREP, and type conversions"
documentation = "https://docs.rs/miniextendr-api"
rust-version = "1.85"

[features]
default = ["doc-lint"]
## Enable non-API R functions. These may break with R updates and cause
## `R CMD check` warnings. See NONAPI.md for details.
nonapi = []
## Enable rayon integration for parallel iterators. Pulls in crossbeam-* crates.
## Add `features = ["rayon"]` to your dependency if needed.
rayon = ["dep:rayon"]
## Enable custom R connection framework. WARNING: R's connection API is explicitly
## marked as unstable and may change between R versions without notice.
connections = []
doc-lint = ["miniextendr-macros/doc-lint"]
## Enable rand crate integration. Provides RRng which wraps R's RNG with rand traits.
rand = ["dep:rand"]
## Enable rand_distr for additional distributions (Normal, Exp, etc.). Requires `rand` feature.
rand_distr = ["rand", "dep:rand_distr"]
## Enable either crate integration. Provides TryFromSexp/IntoR for Either<L, R>.
either = ["dep:either"]
## Enable ndarray integration. Provides conversions for Array1, Array2, ArrayView1, ArrayView2.
ndarray = ["dep:ndarray"]
## Enable nalgebra integration. Provides conversions for DVector, DMatrix.
nalgebra = ["dep:nalgebra"]
## Enable serde with native R serialization.
## Provides RSerializeNative/RDeserializeNative traits for direct Rust<->R conversions.
serde = ["dep:serde"]
## Enable JSON string serialization via serde_json (includes serde).
## Provides RSerialize/RDeserialize traits for JSON conversion.
serde_json = ["serde", "dep:serde_json"]
## Enable num-bigint integration. Provides BigInt/BigUint conversions.
num-bigint = ["dep:num-bigint", "dep:num-integer"]
## Enable rust_decimal integration. Provides Decimal conversions.
rust_decimal = ["dep:rust_decimal"]
## Enable ordered-float integration. Provides OrderedFloat conversions.
ordered-float = ["dep:ordered-float"]
## Enable uuid integration. Provides Uuid conversions (character <-> UUID).
uuid = ["dep:uuid"]
## Enable regex integration. Provides compiled Regex from R character patterns.
regex = ["dep:regex"]
## Enable indexmap integration. Provides IndexMap<String, T> ⇄ named list conversions.
indexmap = ["dep:indexmap"]
## Enable time crate integration. Provides OffsetDateTime ⇄ POSIXct, Date conversions.
time = ["dep:time"]
## Enable jiff integration for datetime types with first-class IANA timezone support.
## Provides conversions for Timestamp/Zoned/civil::Date/SignedDuration, ExternalPtr
## wrappers for Span/DateTime/Time, and optional vctrs + ALTREP layers.
jiff = ["dep:jiff"]
## Enable indicatif progress bar integration. Routes bar output through R
## connections — terminal connections (`stdout()`/`stderr()`) use the console
## hook (`ptr_R_WriteConsoleEx` / `Rprintf` / `REprintf`); all other R
## connections (`sink()`, `textConnection`, `file()`, custom) use
## `R_WriteConnection`. Requires `connections` (for `R_GetConnection` and
## `R_WriteConnection`) and `nonapi` (still needed for the console-hook
## fallback used by the terminal branch — dropping `nonapi` would require R
## to grow a `write` callback on terminal connections upstream).
indicatif = ["dep:indicatif", "nonapi", "connections"]
## Enable num-traits integration. Provides RNum and RFloat adapter traits for generic numeric operations.
num-traits = ["dep:num-traits"]
## Enable bytes crate integration. Provides RBuf and RBufMut adapter traits for byte buffer operations.
bytes = ["dep:bytes"]
## Enable num-complex integration. Provides Complex<f64> ⇄ CPLXSXP conversions.
num-complex = ["dep:num-complex"]
## Enable url integration. Provides Url ⇄ character conversions with strict validation.
url = ["dep:url"]
## Enable sha2 integration. Provides SHA-256/SHA-512 hashing helpers.
sha2 = ["dep:sha2"]
## Enable blake3 integration. Provides BLAKE3 hashing helpers (hex + raw digest).
blake3 = ["dep:blake3"]
## Enable md5 integration. Provides MD5 hashing helpers (hex + raw digest).
## MD5 is cryptographically broken — exposed for interop/checksums only.
md5 = ["dep:md5"]
## Enable globset integration. Provides shell-style glob matching (GlobSet).
globset = ["dep:globset"]
## Enable zstd integration. Provides whole-buffer zstd compress/decompress.
## Builds the bundled zstd C library via zstd-sys (cc crate; no cmake/pkg-config).
zstd = ["dep:zstd"]
## Enable bitflags integration. Provides RFlags<T> wrapper for bitflags ↔ integer conversions.
bitflags = ["dep:bitflags"]
## Enable bitvec integration. Provides BitVec ↔ logical vector conversions.
bitvec = ["dep:bitvec"]
## Enable aho-corasick integration. Provides fast multi-pattern string search.
aho-corasick = ["dep:aho-corasick"]
## Enable toml integration. Provides TOML value ↔ R list/string conversions.
toml = ["dep:toml"]
## Enable tabled integration. Provides table formatting to strings.
tabled = ["dep:tabled"]
## Enable raw_conversions integration. Provides bytemuck-based POD ↔ raw vector conversions.
raw_conversions = ["dep:bytemuck"]
## Enable tinyvec integration. Provides TinyVec/ArrayVec ↔ R vector conversions.
tinyvec = ["dep:tinyvec"]
## Enable borsh integration. Provides Borsh<T> wrapper for binary serialization ↔ raw vector.
borsh = ["dep:borsh"]
## Enable Apache Arrow integration. Provides zero-copy conversions between R vectors/data.frames
## and Arrow arrays/RecordBatch. Foundation for DataFusion and other Arrow-based tools.
arrow = ["dep:arrow-array", "dep:arrow-buffer", "dep:arrow-schema", "dep:arrow-select"]
## Enable DataFusion SQL query engine. Depends on `arrow`. Provides `RSessionContext` for
## running SQL queries on R data frames. Uses Tokio internally (current_thread block_on).
## IMPORTANT: Tokio uses `rt` (current_thread), NOT `rt-multi-thread`. See datafusion_impl.rs.
datafusion = ["arrow", "dep:datafusion", "dep:tokio"]
## Enable log crate integration. Routes Rust log macros (info!, warn!, error!)
## to R's console output (Rprintf/REprintf). Automatically installed during package_init().
log = ["dep:log"]
## Enable vctrs integration. Provides access to vctrs' maturing C API (obj_is_vector,
## short_vec_size, short_vec_recycle) via R_GetCCallable. Requires vctrs R package.
## Also enables the #[derive(Vctrs)] proc-macro.
vctrs = ["miniextendr-macros/vctrs"]
## Enable macro expansion coverage module. Used for `cargo expand` auditing.
macro-coverage = []
## Project-wide defaults for #[miniextendr] options (forwarded to miniextendr-macros).
strict-default = ["miniextendr-macros/strict-default"]
coerce-default = ["miniextendr-macros/coerce-default"]
r6-default = ["miniextendr-macros/r6-default"]
s7-default = ["miniextendr-macros/s7-default"]
## Enable worker thread infrastructure (run_on_worker, with_r_thread bidirectional dispatch).
## Without this feature, worker APIs are lightweight inline stubs.
worker-thread = []
worker-default = ["miniextendr-macros/worker-default", "worker-thread"]
## Enable debug instrumentation for tracking collection growth events.
## Provides track_growth! and report_growth! macros for diagnosing unexpected
## Vec/arena reallocations. Zero-cost (no-ops) when disabled.
growth-debug = []
## Enable fast hasher for refcount protect arenas. Uses ahash instead of SipHash
## for improved throughput on large collections. Not DOS-resistant.
refcount-fast-hash = ["dep:ahash"]
# region: feature aggregates
#
# Two composable aggregates so "all features" is defined in ONE place and CI's
# `clippy_all` step can derive its codegen-selector half instead of re-curating
# it (see #677). Adding a new feature only requires updating the matching
# aggregate below; CI follows automatically.
#
# MUTEX CONSTRAINT: `r6-default` and `s7-default` are mutually exclusive — a
# `compile_error!` in miniextendr-macros fires if both are enabled (#676/#710).
# This is exactly why `--all-features` can't be used. `full-codegen` therefore
# picks exactly ONE side of that pair (`r6-default`); `full-codegen-s7` is the
# identical set with the mutex flipped to `s7-default`, so CI can lint both
# sides. Keep the two lists in lock-step — they must differ ONLY in the mutex
# member. (`strict-default` and `coerce-default` are NOT a mutex pair —
# they're orthogonal, see docs/FEATURE_DEFAULTS.md — so both live in
# `full-codegen` together.)

## Every optional integration crate (the "dep:" features). Heavy deps like
## arrow/datafusion/log live here; CI's `clippy_all` enables a curated subset.
full-integrations = [
    "serde", "serde_json", "num-complex", "uuid", "url", "aho-corasick",
    "bitflags", "bitvec", "arrow", "datafusion", "toml", "time", "jiff",
    "ndarray", "nalgebra", "indexmap", "tinyvec", "bytes", "raw_conversions",
    "vctrs", "borsh", "ordered-float", "num-bigint", "rust_decimal", "regex",
    "num-traits", "tabled", "rayon", "sha2", "rand", "rand_distr", "either",
    "log", "blake3", "md5", "globset", "zstd",
]

## Every codegen selector / runtime-surface feature that CI wants linted:
## the `*-default` forwarding selectors (one mutex side — `r6-default`, NOT
## `s7-default`), plus `nonapi`, `connections`, `worker-thread` (via
## `worker-default`), `indicatif`, and `refcount-fast-hash` (the ahash-backed
## refcount-arena hasher knob). This whole set compiles together — it is
## the unit CI's `clippy_all` derives.
full-codegen = [
    "strict-default", "coerce-default", "r6-default", "worker-default",
    "nonapi", "connections", "indicatif", "refcount-fast-hash",
]

## `full-codegen` with the r6/s7 mutex flipped: `s7-default` instead of
## `r6-default`. CI's `clippy_all_s7` step derives from this — it is the only
## compile gate anywhere for the s7 side of the mutex (rpkg's
## tools/detect-features.R denylists `s7-default`, and the root-workspace
## clippy steps never reach rpkg/src/rust).
full-codegen-s7 = [
    "strict-default", "coerce-default", "s7-default", "worker-default",
    "nonapi", "connections", "indicatif", "refcount-fast-hash",
]

## Back-compat kitchen sink: integrations + codegen selectors + debug/audit
## features. Use for local development checks:
## `cargo check -p miniextendr-api --features full`.
## NOTE: now includes the codegen selectors (and hence `r6-default`, `nonapi`,
## `connections`) via `full-codegen` — `s7-default` is excluded by the mutex.
full = [
    "full-integrations", "full-codegen",
    "macro-coverage", "growth-debug",
]
# endregion

[dependencies]
linkme = { workspace = true }
miniextendr-macros = { workspace = true }
rayon = { version = "1.11.0", optional = true }
rand = { version = "0.10.0", optional = true }
rand_distr = { version = "0.6.0", optional = true }
either = { version = "1.15.0", optional = true }
ndarray = { version = "0.17.1", optional = true }
nalgebra = { version = "0.34.1", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.148", optional = true }
indicatif = { version = "0.18.3", optional = true }
num-bigint = { version = "0.4.6", optional = true }
num-integer = { version = "0.1.46", optional = true }
rust_decimal = { version = "1.39.0", optional = true }
ordered-float = { version = "5.1.0", optional = true }
uuid = { version = "1.19.0", optional = true, features = ["v4"] }
regex = { version = "1.12.2", optional = true }
indexmap = { version = "2.12.1", optional = true }
time = { version = "0.3.44", optional = true, features = [
    "formatting",
    "parsing",
    "macros",
] }
jiff = { version = "0.2", optional = true, default-features = false, features = ["std", "tzdb-bundle-always"] }
num-traits = { version = "0.2.19", optional = true }
bytes = { version = "1.11.0", optional = true }
num-complex = { version = "0.4.6", optional = true }
url = { version = "2.5.7", optional = true }
sha2 = { version = "0.10.9", optional = true }
bitflags = { version = "2.10.0", optional = true }
bitvec = { version = "1.0.1", optional = true }
aho-corasick = { version = "1.1.4", optional = true }
toml = { version = "0.9.8", optional = true }
tabled = { version = "0.20.0", optional = true }
bytemuck = { version = "1.23.0", optional = true, features = ["derive"] }
ahash = { version = "0.8", optional = true }
tinyvec = { version = "1.9", optional = true, features = ["alloc"] }
borsh = { version = "1", optional = true, features = ["derive"] }
arrow-array = { version = "55", optional = true }
arrow-buffer = { version = "55", optional = true }
arrow-schema = { version = "55", optional = true }
arrow-select = { version = "55", optional = true }
datafusion = { version = "48", optional = true, default-features = false }
tokio = { version = "1", optional = true, features = ["rt"] }
log = { version = "0.4", optional = true }
blake3 = { version = "1.8", optional = true, default-features = false }
md5 = { version = "0.8", optional = true }
globset = { version = "0.4", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
miniextendr-engine = { workspace = true }
proptest = "1.6"
