[package]
name = "miniextendr-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Benchmarks for miniextendr"
publish = false

[dependencies]
miniextendr-api = { workspace = true }
miniextendr-engine = { workspace = true }

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "translate"
harness = false

[[bench]]
name = "ffi_calls"
harness = false

[[bench]]
name = "into_r"
harness = false

[[bench]]
name = "from_r"
harness = false

[[bench]]
name = "externalptr"
harness = false

# Note: Profile is defined in workspace root Cargo.toml
