[package]
name = "miniextendr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "miniextendr"
path = "src/main.rs"

[features]
dev = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
