[package]
name = "miniextendr-engine"
edition.workspace = true
version.workspace = true
links = "R"

[lib]
crate-type = ["lib"]

[dependencies]
# No dependencies on miniextendr-api - this is standalone

[build-dependencies]

[features]
default = []
# Note: This entire crate uses non-API R functions (Rembedded.h, Rinterface.h)
# for embedding R. It is not intended for use in R packages.
