[package]
name = "miniextendr-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal build-time linter for miniextendr (not published to crates.io)"
publish = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
