[package]
name = "miniextendr-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal build-time linter for miniextendr (not published to crates.io)"
publish = false

[dependencies]
miniextendr-macros-core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
divan = "0.1.21"
tempfile = "3.12"

[[bench]]
name = "lint_scan"
harness = false
