[package]
name = "miniextendr-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for miniextendr - Rust bindings for R"
documentation = "https://docs.rs/miniextendr-macros"

[lib]
proc-macro = true

[features]
doc-lint = []
vctrs = []

[dependencies]
miniextendr-macros-core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
miniextendr-api = { workspace = true }
expect-test = "1.4"
