[package]
name = "miniextendr-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for miniextendr - Rust bindings for R"
documentation = "https://docs.rs/miniextendr-macros"

[lib]
proc-macro = true

[features]
doc-lint = []
vctrs = []
## Project-wide defaults for #[miniextendr] options.
## Enable via Cargo.toml features to apply to all functions/impl blocks.
## Individual items can opt out with no_strict, no_coerce, no_fast, etc.
strict-default = []
coerce-default = []
r6-default = []
s7-default = []
worker-default = []
## Enable fast-path knobs (no_preconditions + no_call_attribution) by default
## for all #[miniextendr] functions and impl blocks. Individual items can opt
## out with `#[miniextendr(no_fast)]` to restore full error UX.
## Orthogonal to strict-default and coerce-default (not a mutex pair).
fast-default = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
insta = "1"
miniextendr-api = { workspace = true }
